--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,9 @@
 /* Debug */
 #undef DEBUG
 
+/* Define to 1 if you have the <arpa/inet.h> header file. */
+#undef HAVE_ARPA_INET_H
+
 /* Have bzdopen() ? */
 #undef HAVE_BZDOPEN
 
@@ -30,6 +33,12 @@
 /* Have dlopen()? */
 #undef HAVE_DLOPEN
 
+/* Define to 1 if you have the <errno.h> header file. */
+#undef HAVE_ERRNO_H
+
+/* Have gethostbyname() */
+#undef HAVE_GETHOSTBYNAME
+
 /* Define to 1 if you have the `getopt' function. */
 #undef HAVE_GETOPT
 
@@ -42,7 +51,10 @@
 /* Have gzdopen() ? */
 #undef HAVE_GZDOPEN
 
-/* Have inet_aton() ? */
+/* Have inet_addr() */
+#undef HAVE_INET_ADDR
+
+/* Have inet_aton() */
 #undef HAVE_INET_ATON
 
 /* Define to 1 if you have the <inttypes.h> header file. */
@@ -56,6 +68,9 @@
 
 /* Something */
 #undef HAVE_LIBMCRYPT
+
+/* Have libwsock32 */
+#undef HAVE_LIBWSOCK32
 
 /* Something */
 #undef HAVE_LIBZ
@@ -81,6 +96,12 @@
 /* Define to 1 if you have the `mkstemp' function. */
 #undef HAVE_MKSTEMP
 
+/* Define to 1 if you have the <netdb.h> header file. */
+#undef HAVE_NETDB_H
+
+/* Define to 1 if you have the <netinet/in.h> header file. */
+#undef HAVE_NETINET_IN_H
+
 /* Have BZ2_ prefixed to all bzip2 symbols? */
 #undef HAVE_NEW_BZ2
 
@@ -89,6 +110,12 @@
 
 /* Do not have BZ2_ prefixed to all bzip2 symbols? */
 #undef HAVE_OLD_BZ2
+
+/* Have socket() */
+#undef HAVE_SOCKET
+
+/* Define to 1 if you have the <stdarg.h> header file. */
+#undef HAVE_STDARG_H
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
@@ -126,8 +153,20 @@
 /* Define to 1 if you have the <sys/wait.h> header file. */
 #undef HAVE_SYS_WAIT_H
 
+/* Define to 1 if you have the `uname' function. */
+#undef HAVE_UNAME
+
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
+
+/* Define to 1 if you have the <windowsx.h> header file. */
+#undef HAVE_WINDOWSX_H
+
+/* Define to 1 if you have the <windows.h> header file. */
+#undef HAVE_WINDOWS_H
+
+/* Define to 1 if you have the <winsock2.h> header file. */
+#undef HAVE_WINSOCK2_H
 
 /* Define to 1 if you have the <zlib.h> header file. */
 #undef HAVE_ZLIB_H
