--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 CC = @CC@
-CFLAGS = @CFLAGS@ @DEFS@
-CPPFLAGS = @CPPFLAGS@
+CFLAGS = -D_LARGEFILE64_SOURCE -D_LARGEFILE64_SOURCE @CFLAGS@ @DEFS@
+CPPFLAGS = -D_LARGEFILE64_SOURCE -D_LARGEFILE64_SOURCE @CPPFLAGS@
 
 EXEEXT = @EXEEXT@
 OBJEXT = @OBJEXT@
