More work on making DACT 64bit/largefile compatible.
FossilOrigin-Name: 5c0d91e52a2fdf1e5ed60317902a61e2f951977e

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 CC = @CC@
-CFLAGS = -D_LARGEFILE64_SOURCE -D_LARGEFILE64_SOURCE @CFLAGS@ @DEFS@
-CPPFLAGS = -D_LARGEFILE64_SOURCE -D_LARGEFILE64_SOURCE @CPPFLAGS@
+CFLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE @CFLAGS@ @DEFS@
+CPPFLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE @CPPFLAGS@
 
 EXEEXT = @EXEEXT@
 OBJEXT = @OBJEXT@
