Fixed compilation bugs, when no ar/ranlib is found, they're replaced with #, which creates a Makefile line like: AR = #  (where # starts a comment)
net.c: Fixed #ifdef's

FossilOrigin-Name: 4a1d504ec58b898f3627910f98fce100ed7337e8

--- a/Makefile.in
+++ b/Makefile.in
@@ -67,8 +67,8 @@ libdact.so: $(OBJS) libdact.o
 	@true
 
 libdact.a: $(OBJS) libdact.o
-	$(AR) rcu libdact.a $(filter-out dact.o, $^)
-	$(RANLIB) libdact.a
+	@AR@ rcu libdact.a $(filter-out dact.o, $^)
+	-@RANLIB@ libdact.a
 
 %.so: %.c %.lnk
 	@echo $(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) -o $@ -DAS_MODULE @SHARED@ $< $(filter %.o, $^) `cat $(<:.c=.lnk)`; \
