--- a/Makefile.in
+++ b/Makefile.in
@@ -1,11 +1,48 @@
 CC = @CC@
+AR = @AR@
+RANLIB = @RANLIB@
 CFLAGS = @CFLAGS@
 LDFLAGS = @LDFLAGS@
 CPPFLAGS = @CPPFLAGS@
+SHOBJFLAGS = @SHOBJFLAGS@
+SHOBJLDFLAGS = @SHOBJLDFLAGS@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 bindir = @bindir@
 libdir = @libdir@
 
-all: libdact.@SHOBJEXT@ libdact.@AREXT@ dact@EXE@
+LIBOBJS = libdact.o
+SHLIBOBJS = libdact_shr.o
+
+all: libdact.@SHOBJEXT@ libdact.@AREXT@
+
+libdact.@SHOBJEXT@: $(SHLIBOBJS)
+	$(CC) $(CFLAGS) $(SHOBJLDFLAGS) -o libdact.@SHOBJEXT@ $(LDFLAGS) $(SHLIBOBJS)
+	@WEAKENSYMS@ libdact.@SHOBJEXT@
+	@REMOVESYMS@ libdact.@SHOBJEXT@
+
+libdact.@AREXT@: $(LIBOBJS)
+	$(AR) cr libdact.@AREXT@ $(LIBOBJS)
+	$(RANLIB) libdact.@AREXT@
+
+%.o: %.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) -o "$@" -c "$^"
+
+%_shr.o: %.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(SHOBJFLAGS) -o "$@" -c "$^"
+
+libdact.o: libdact.c
+
+clean:
+	rm -f $(LIBOBJS) $(SHLIBOBJS)
+	rm -f libdact.@SHOBJEXT@ libdact.@AREXT@ dact@EXE@
+
+distclean: clean
+	rm -f config.h Makefile libdact.syms
+	rm -f config.status config.log
+
+mrproper: distclean
+	./build/autogen.sh distclean
+
+.PHONY: all clean distclean mrproper
