--- a/Makefile.in
+++ b/Makefile.in
@@ -23,7 +23,7 @@ SRCOBJS = $(LIBOBJS:.o=.c)
 all: libdact.@SHOBJEXT@ libdact.@AREXT@
 
 # Specific build rules
-libdact.@SHOBJEXT@: $(SHLIBOBJS)
+libdact.@SHOBJEXT@: $(SHLIBOBJS) libdact.vers
 	$(CC) $(CFLAGS) $(SHOBJLDFLAGS) -o libdact.@SHOBJEXT@ $(LDFLAGS) $(SHLIBOBJS)
 	@WEAKENSYMS@ libdact.@SHOBJEXT@
 	@REMOVESYMS@ libdact.@SHOBJEXT@
@@ -36,6 +36,16 @@ libdact.@AREXT@: libdact_combined_shr.o
 
 libdact_combined.c: $(SRCOBJS)
 	cat $(SRCOBJS) > libdact_combined.c
+
+libdact.vers: libdact.syms.in
+	echo '{' > libdact.vers
+	echo '  global:' >> libdact.vers
+	for symbol in `cat libdact.syms.in | sed 's/^@''SYMPREFIX@//'`; do \
+		echo "          $${symbol};"; \
+	done >> libdact.vers
+	echo '  local:' >> libdact.vers
+	echo '          *;' >> libdact.vers
+	echo '};' >> libdact.vers
 
 # Generic build rules
 %.o: %.c
